# OpenCV

./: .gitignore  README.md  pyproject.toml
Basic/: imwrite_test.py
Brightness&Arithmetic/: brightness_adjustment.py  convert_color.py
CheckerBoardProject/: hw1_1.py  hw1_2.py  hw1_3.py  hw1_4.py
ColorImageProcessing/: channel_division_merge.py  color_equalization.py  color_image.py  color_range_detect.py  convert2grayscale.py
EdgeDetection/: canny_edge.py  hough_circle.py  hough_line_segments.py  hough_lines.py  sobel_derivative.py  sobel_edge.py
Filtering/: 1.py  bilateral_filter.py  blurring.py  gaussian.py  gaussian_noise.py  median_filter.py  unsharp.py
Geometric_transformation/: affine_flip.py  affine_resize.py  affine_rotate.py  affine_shear.py  affine_shift_transformation.py  affine_transformation.py  perspective_transform.py
Numpy/: numpy_practice_1.py  numpy_practice_slicing.py
SVM/: hog_svm_handwriting_classification.py  simple_svm.py
ai_practice/: hw2_1.py  hw2_2.py  hw2_3.py  readme.md
ch02/: HelloCV.py  numpy_practice.py
ch05/: 1.py  3.py  4.py  5.py  6.py  7.py
ch06/: blurring.py  emboss.py
kNN/: dot_classification.py  handwriting_number_classification.py
